--- a/bsconfig.json
+++ b/bsconfig.json
@@ -2,7 +2,7 @@
   "name": "reason-uuid",
   "refmt": 3,
   "package-specs": {
-    "module": "es6",
+    "module": "commonjs",
     "in-source": true
   },
   "suffix": ".bs.js",
