--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "reason-uuid",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "BuckleScript bindings for node-uuid",
   "scripts": {
     "build": "bsb -make-world",
-    "start": "bsb -make-world -w"
+    "start": "bsb -make-world -w",
+    "test": "node example/example.bs.js"
   },
   "keywords": [
     "uuid",
@@ -24,9 +25,9 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "uuid": "^3.3.3"
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "bs-platform": "5.0.6"
+    "bs-platform": "7.2.2"
   }
 }
